# yamkix

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .tool-versions  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.rst  circleci.Dockerfile  exec-dirty.Dockerfile  exec.Dockerfile  how-to-release.txt  index.html  mkdocs.yml  objects.inv  poe_tasks.toml  pyproject.toml  pytest.ini  release-please-config.json  renovate.json5  requirements.txt  requirements_dev.txt  ruff.toml  ruff_defaults.toml  setup.cfg  setup.py  sitemap.xml  (+5 more)
.circleci/: config.yml  config.yml.disabled
.github/: copilot-instructions.md  dependabot.yml  zizmor.yml
.github/workflows/: build.yml  build_it.yml  code_checks.yml  codeql.yml  lint_pr_titles.yml  publish_docs.yml  release_please.yml  workflows_checks.yml
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: changelog.md  configuration.md  contributing.md  index.md  install.md  pointers.md  usage.md
docs/explanation/: ecosystem.md  formatting-rules.md  yamllint-relaxed.md
docs/how-to/: align-comments.md  control-quotes.md  editor-integration.md  enforce-block-style.md  format-files.md  pre-commit.md
docs/reference/: api.md  cli.md
docs/tutorials/: getting-started.md
experiments/: README.md  __init__.py  align_comments.py  test-comments-simple.py  test-comments.py  test-dash-map.py  test-dash.py  test_comments.py  test_comments_simple.py  test_dash.py  test_dash_map.py  test_enforce_double_quotes.py  test_flow_style.py
explanation/ecosystem/: index.html
explanation/formatting-rules/: index.html
explanation/yamllint-relaxed/: index.html
how-to/align-comments/: index.html
how-to/control-quotes/: index.html
how-to/editor-integration/: index.html
how-to/enforce-block-style/: index.html
how-to/format-files/: index.html
how-to/install/: index.html
how-to/pre-commit/: index.html
install/: index.html
pointers/: index.html
reference/: index.html
reference/api/: index.html
reference/cli/: index.html
search/: search_index.json
src/yamkix/: __init__.py  __main__.py  __version__.py  _cli.py  args.py  comments.py  config.py  errors.py  helpers.py  typer_cli.py  yamkix.py  yaml_writer.py
test-assets/: test_yamkix.bash
test-assets/expected/: dash-at-col2-1--no-dash-inwards.yml  issue-11--spaces-before-comment-2--no-dash-inwards.yml  issue-11-bad-indent--spaces-before-comment-2--no-dash-inwards.yml  issue-11-bad-indent--spaces-before-comment-2.yml  issue-11-ruamel-318--spaces-before-comment-1.yml  issue-29--spaces-before-comment-1.yml  k8s-deployment-with-comments-1--spaces-before-comment-1.yml  multi-doc-1--no-dash-inwards.yml
test-assets/source/: issue-11.yml  issue-29.yml  k8s-deployment-with-comments-1.yml  simple.yml
tests/: conftest.py  test_args.py  test_cli.py  test_comments.py  test_config.py  test_helpers.py  test_non_regression.py  test_typer_cli.py  test_yamkix.py  test_yaml_writer.py  test_yaml_writer_config.py
tests/data/: malformed-yaml-file.yml  multi-doc-1.yml
tests/data/expected/: dash-at-col0-1--set-dash-inwards.yml  flow-sequences-and-maps--convert-flow-to-block.yml  flow-style-collections--default-flow-style-and-enforce-block-style.yml  flow-style-collections--default.yml  flow-style-collections--no-quotes-preserved-enforce-double-quotes-enforce-block-style.yml  flow-style-with-comments--enforce-block-style-spaces-before-comment-1.yml  flow-style-with-comments--enforce-block-style.yml  issue-11--set-dash-inwards-and-comment-1-space.yml  issue-11--set-dash-inwards-and-yamllint-compat.yml  issue-11--spaces-before-comment-0.yml  issue-11--spaces-before-comment-2.yml  issue-11-ruamel-338--spaces-before-comment-2.yml  issue-259-01--default.yml  issue-259-01.yml  issue-29--spaces-before-comment-2--no-dash-inwards.yml  issue-29--spaces-before-comment-2.yml  issue-437--default.yml  k8s-deployment-with-comments-shifted-1--spaces-before-comment-1.yml  lists-and-maps-json-style--convert-flow-to-block.yml  lists-and-maps-json-style--set-dash-inwards.yml  no-start-no-end--default.yml  no-start-no-end--no-quotes-preserved-enforce-double-quotes.yml  no-start-no-end--no-quotes-preserved.yml  no-start-no-end--set-explicit-end.yml
tests/data/source/: dash-at-col0-1.yml  dash-at-col2-1.yml  flow-sequences-and-maps.yml  flow-style-collections.yml  flow-style-with-comments.yml  issue-11-bad-indent.yml  issue-11-ruamel-318.yml  issue-11-ruamel-338.yml  issue-11.yml  issue-259-01.yml  multi-doc-1.yml  (+4 more)
tests/integration/: __init__.py  test_cli_subprocess.py  test_kubesplit_compat.py  test_package_install.py
toolbox/mk/: project.mk  python-base-app.mk
toolbox/scripts/: yamkix-wrapper.sh
tooling/mk/: asdf.mk  common.mk  docker.mk  python-app.mk  python-poetry-app.mk  python-poetry-venv.mk  python-venv.mk  remote-mk.mk
tutorials/getting-started/: index.html
usage/: index.html
yamkix/: __init__.py  __main__.py  args.py  comments.py  config.py  helpers.py  yamkix.py  yaml_writer.py  yaml_writer_config.py
(+10 files in other folders)
