[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
  "versioningit>=3.1.2",
]

[project]
name = "yamkix"
version = "0.0.0-dev"
description = "An opinionated yaml formatter based on ruamel.yaml"
authors = [
  { name = "Christophe Furmaniak", email = "christophe.furmaniak@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Topic :: Utilities",
]
dependencies = [
  "ruamel-yaml>0.17.27",
]

[project.urls]
Repository = "https://github.com/looztra/yamkix"

[project.scripts]
yamkix = "yamkix.__main__:main"

[dependency-groups]
dev = [
  "tox~=3.27",
  "faker>=30.8.0",
  "poethepoet>=0.29.0",
  "pylint>=3.3.1",
  "pyright>=1.1.384",
  "pytest-coverage>=0.0",
  "pytest-mock>=3.14.0",
  "pytest-unordered>=0.6.1",
  "pytest>=8.3.3",
  "ruff>=0.9.6",
]

[tool.hatch.build.hooks.versioningit-onbuild]
build-file = "yamkix/__init__.py"
source-file = "src/yamkix/__init__.py"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.wheel]
include = [
  "src/yamkix",
]

[tool.hatch.build.targets.wheel.sources]
"src/yamkix" = "yamkix"


[tool.versioningit]
default-version = "0.0.0.dev0+0"

[tool.versioningit.vcs]
default-tag = "v0.0.0"

[tool.versioningit.format]
# Format used when there have been commits since the most recent tag:
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# Example formatted version: 1.2.3.post42+ge174a1f

# Format used when there are uncommitted changes:
dirty = "{base_version}+dirty{build_date:%Y%m%d}"
# Example formatted version: 1.2.3+d20230922

# Format used when there are both commits and uncommitted changes:
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
